--- a/Main.xaml
+++ b/Main.xaml
@@ -270,7 +270,7 @@
     </sap:WorkflowViewStateService.ViewState>
     <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="452,240" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <TryCatch.Try>
-        <Flowchart sap:VirtualizedContainerService.HintSize="605.3333333333333,533.6566666666666" sap2010:WorkflowViewState.IdRef="Flowchart_1">
+        <Flowchart sap:VirtualizedContainerService.HintSize="934,533.6566666666666" sap2010:WorkflowViewState.IdRef="Flowchart_1">
           <Flowchart.Variables>
             <Variable x:TypeArguments="x:Int32" Name="RowsToProcessCount" />
           </Flowchart.Variables>
@@ -312,7 +312,7 @@
                     <av:Point x:Key="AnnotationLocation">410,103</av:Point>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="UserChoosesAnInputExcelfile - Invoke Workflow File (UserChoosesAnInputExcelfile.xaml)" DisplayName="User Chooses File" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="UserChoosesAnInputExcelfile.xaml">
+                <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="UserChoosesAnInputExcelfile - Invoke Workflow File (UserChoosesAnInputExcelfile.xaml)" DisplayName="User Chooses File" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Workflows\UserChoosesAnInputExcelfile.xaml">
                   <ui:InvokeWorkflowFile.Arguments>
                     <OutArgument x:TypeArguments="x:String" x:Key="PathToFile">[PathToFile]</OutArgument>
                   </ui:InvokeWorkflowFile.Arguments>
